--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>ANF-tv</title>
+  <link rel="stylesheet" href="./css/header.css">
+  <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
   <header id="header">
@@ -14,19 +16,179 @@
       </div>
       <div id="news-categories">
         <ul id="news-list-container">
-          <li id="news">News</li>
-          <li id="politics">Politics</li>
-          <li id="sports">Sports</li>
-          <li id="culture">Culture</li>
-          <li id="business">Business</li>
-          <li id="entertainment">Entertainment</li>
-          <li id="science-technology">Science & Technology</li>
+          <li id="news">
+            <a href="#" id="news-link">News</a>
+          </li>
+          <li id="politics">
+            <a href="#" id="politics-link">Politics</a>
+          </li>
+          <li id="sports">
+            <a href="#" id="sports-link">Sports</a>
+          </li>
+          <li id="culture">
+            <a href="#" id="culture-link">Culture</a>
+          </li>
+          <li id="business">
+            <a href="#" id="business-link">Business</a>
+          </li>
+          <li id="entertainment">
+            <a href="#" id="entertainment-link">Entertainment</a>
+          </li>
+          <li id="science-technology">
+            <a href="#" id="science-technology-link">Science & Technology</a>
+          </li>
         </ul>
       </div>
       <div id="search">
-        <input type="search" name="search" id="search">
+        <input type="search" name="search" value="Search" id="search-input">
+        <button id="search-button">
+          <img id="search-img" src="./public/Images/Search.png" alt="search-icon" id="search-icon">
+        </button>
       </div>
     </nav>
+    <hr id="nav-border">
+    <div id="top-stories">
+        <div id="subject-container">
+          <h1 id="subject">
+            Buhari signs AFCTA agreement
+          </h1>
+        </div>
+        <div id="image-container">
+          <img src="./public/Images/download.jpg" alt="top-story-image" id="top-story-img">
+        </div>
+        <div id="slide-icon-container">
+          <div class="slide-icon current-slide-icon"></div>
+          <div class="slide-icon"></div>
+          <div class="slide-icon"></div>
+          <div class="slide-icon"></div>
+          <div class="slide-icon"></div>
+        </div>
+    </div>
   </header>
+  <main id="hero">
+    <section id="left-panel">
+      <div id="left-hero-display-card">
+          <h2 id="left-hero-header">
+              TOP STORIES
+          </h2>
+          <div id="news-panel">
+
+            <div class="news-card">
+            <a href="#">
+            <img src="./public/Images/download.jpg" alt="news-image" class="news-card-img">
+            <p class="news-card-title">
+              Nigeria joins 50 plus countries as president Buhari signs AFCTA agreement.
+            </p>
+            </a>
+
+            <a href="#">
+              <img src="./public/Images/osinbamjo.jpeg" alt="news-image" class="news-card-img">
+              <p class="news-card-title">
+                Nigerians should tap into AFCTA treaty - VP Osinbanjo
+              </p>
+              </a>
+
+            <a href="#">
+              <img src="./public/Images/AfCTA.jpg" alt="news-image" class="news-card-img">
+              <p class="news-card-title">
+                AFCTA: The good, the challenges.
+              </p>
+              </a>
+
+            <a href="#">
+              <img src="./public/Images/NRC-1.jpg" alt="news-image" class="news-card-img">
+              <p class="news-card-title">
+                AFRICA: Plans on Nigeria - Niger railway project.
+              </p>
+              </a>
+            </div>
+            
+
+
+          </div>
+      </div>
+    </section>
+    <section id="right-panel">
+      <div id="editors-pick">
+          <h2 id="editors-pick-header">
+            EDITORS PICK
+          </h2>
+          <ul id="editors-pick-container">
+            <a href="#">
+            <li class="editors-pick-list">
+              Nigeria joins 50 plus countries as president Buhari signs AFCTA agreement.  
+            </li>
+            </a>
+            <a href="#">
+            <li class="editors-pick-list">
+              Buhari drops Ararume as NNPC chair-nominee, appoints Okadigbo’s widow.
+            </li>
+            </a>
+            <a href="#">
+            <li class="editors-pick-list">
+              Muslim/Muslim ticket unacceptable, says CAN, NSCIA differs.
+            </li>
+            </a>
+            <a href="#">
+            <li class="editors-pick-list">
+              We'll soon showcase our achievements, says IPOB
+            </li>
+            </a>
+            
+            <a href="#">
+            <li class="editors-pick-list">
+              Nigerians to pay VAT for digital services – Finance minister
+            </li>
+            </a>
+            <a href="#">
+            <li class="editors-pick-list">
+              Nigeria urgently needs a Mental Health Act
+            </li>
+            </a>
+            <a href="#">
+            <li class="editors-pick-list">
+              One dead as gunmen attack flyover in Anambra
+            </li>
+            </a>
+            <a href="#">
+            <li class="editors-pick-list">
+              Enugu schools to resume Jan 10, says Education commissioner
+            </li>
+            </a>
+            <a href="#">
+            <li class="editors-pick-list">
+              Ramsey to leave Juventus, says Allegri
+            </li>
+            </a>
+            <a href="#">
+            <li class="editors-pick-list">
+              Jim Iyke paid N4.8m to 'beat' me, promote his movie - Uche Maduagwu
+            </li>
+            </a>
+            <a href="#">
+            <li class="editors-pick-list">
+              I hope to see my son one day — 82-year-old father of 'underwear bomber', Mutallab 
+            </li>
+            </a>
+
+          </ul>
+      </div>
+      <div id="featured">
+        <h2 id="featured-header">
+          FEATURED
+        </h2>
+        <ul id="featured-links">
+          <a href="#">
+            <li class="featured-list">
+              I hope to see my son one day — 82-year-old father of 'underwear bomber', Mutallab 
+            </li>
+            </a>
+        </ul>
+      </div>
+    </section>
+  </main>
+  <footer id="footer">
+
+  </footer>
 </body>
 </html>
