landing page completion

--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>ANF-tv</title>
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
   <link rel="stylesheet" href="./css/header.css">
   <link rel="stylesheet" href="./css/main.css">
+  <link rel="stylesheet" href="./css/footer.css">
 </head>
 <body>
   <header id="header">
@@ -305,6 +307,8 @@
         <h3 class="card-header">
           Politics
         </h3>
+        <img src="./public/Images/abdurrahman.jpg" alt="card image" class="category-card-img">
+        <p class="category-card-p">Governor Abdulrahman Abdulrazaq of Kwara State on Wednesday presented a budget of N189,494,692,524, for 2022 to the state House of Assembly.</p>
       </div>
       </a>
       <a class="card-container" href="#">
@@ -312,6 +316,8 @@
         <h3 class="card-header">
           Sports
         </h3>
+        <img src="./public/Images/1_Vlahovic-Lacazette.png" alt="card image" class="category-card-img">
+        <p class="category-card-p">Alexandre Lacazette is telling Arsenal to rethink Dusan Vlahovic bid after revealing comparison</p>
       </div>
       </a>
       <a class="card-container" href="#">
@@ -319,6 +325,8 @@
         <h3 class="card-header">
           Culture
         </h3>
+        <img src="./public/Images/maasai_women.jpg" alt="card image" class="category-card-img">
+        <p class="category-card-p">African culture, with its intriguing tribes and traditions, is a wildly diverse subject. (Largely because Africa is such a massive place). Find out more about the most fascinating African tribes and traditional African cultures in this post, along with recommended cultural tours in Africa.</p>
       </div>
       </a>
       <a class="card-container" href="#">
@@ -326,6 +334,8 @@
         <h3 class="card-header">
           Entertainment
         </h3>
+        <img src="./public/Images/fireboy-ed-sheeran.jpg" alt="card image" class="category-card-img">
+        <p class="category-card-p">Nigerian singer, Fireboy DML debuted in the top 30 of the Official UK Top 40 Charts with a remix of his smash hit single, 'Peru' featuring Ed Sheeran.</p>
       </div>
       </a>
       <a class="card-container" href="#">
@@ -333,6 +343,8 @@
         <h3 class="card-header">
           Business
         </h3>
+        <img src="./public/Images/bua.png" alt="card image" class="category-card-img">
+        <p class="category-card-p">Tackling COVID-19: BUA's Donation Raises More Questions Than Answers</p>
       </div>
       </a>
       <a class="card-container" href="#">
@@ -340,6 +352,8 @@
         <h3 class="card-header">
           Science and Technology
         </h3>
+        <img src="./public/Images/microsoft.jpeg" alt="card image" class="category-card-img">
+        <p class="category-card-p">Microsoft Corp. is reportedly in talks to acquire Discord Inc., a video-game chat community, for more than $10 billion.</p>
       </div>
       </a>
 
@@ -347,7 +361,42 @@
   </div>
   </main>
   <footer id="footer">
-
+    <div id="anf-tv-ads">
+      <img class="footer-ads-img" src="./public/Images/Untitled-2.png" alt="" id="ad-img">
+    </div>
+    <div id="footer-nav">
+      <div id="left-p">
+        <p id="company" class="company">
+          <a class="footer-p-link" href="">Company </a>
+        </p>
+      </div>
+      <div id="center-icon">
+        <img src="./public/Images/Untitled-2.png" alt="Company Icon" id="company-icon" class="company-icon">
+      </div>
+      <div id="right-p">
+        <p id="helpdesk" class="helpdesk">
+          <a class="footer-p-link" href=""> Help desk </a>
+        </p>
+      </div>
+    </div>
+    <hr style="border: #2201f9 solid 0.5px;">
+    <div id="footer-contact">
+      <a href="https://web.facebook.com/watch/ANFTV.NET/" target="_blank">
+      <i class="fab fa-facebook"></i>
+      </a>
+      <a href="" target="_blank">
+      <i class="fab fa-twitter"></i>
+      </a>
+      <a href="" target="_blank">
+      <i class="fab fa-instagram"></i>
+      </a>
+      <a href="" target="_blank">
+      <i class="fab fa-linkedin-in"></i>
+      </a>
+    </div>
+    <p id="footer-copy-right">
+      © ANF-tv, Inc. 2022. Thank you for visiting.
+    </p>
   </footer>
 </body>
 </html>
