--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Welcome ANF-tv Official website">
+  <link rel="icon" type="image/png" href="./public/Images/tv logo 2.png"/>
+    <meta name="keywords" content="Portfolio,suleiman's Portfolio,Faruk's Portfolio,developer's Portfolio">
   <title>ANF-tv</title>
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
   <link rel="stylesheet" href="./css/header.css">
