--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Welcome ANF-tv Official website">
+  <meta name="description" content="ANF-tv Official website">
   <link rel="icon" type="image/png" href="./public/Images/tv logo 2.png"/>
     <meta name="keywords" content="Portfolio,suleiman's Portfolio,Faruk's Portfolio,developer's Portfolio">
   <title>ANF-tv</title>
@@ -80,28 +80,28 @@
           <div id="news-panel">
 
             <div class="news-card">
-            <a href="#">
+            <a class="news card-link" href="#">
             <img src="./public/Images/download.jpg" alt="news-image" class="news-card-img">
             <p class="news-card-title">
               Nigeria joins 50 plus countries as president Buhari signs AFCTA agreement.
             </p>
             </a>
 
-            <a href="#">
+            <a class="news card-link" href="#">
               <img src="./public/Images/osinbamjo.jpeg" alt="news-image" class="news-card-img">
               <p class="news-card-title">
                 Nigerians should tap into AFCTA treaty - VP Osinbanjo
               </p>
               </a>
 
-            <a href="#">
+            <a class="news card-link" href="#">
               <img src="./public/Images/AfCTA.jpg" alt="news-image" class="news-card-img">
               <p class="news-card-title">
                 AFCTA: The good, the challenges.
               </p>
               </a>
 
-            <a href="#">
+            <a class="news card-link" href="#">
               <img src="./public/Images/NRC-1.jpg" alt="news-image" class="news-card-img">
               <p class="news-card-title">
                 AFRICA: Plans on Nigeria - Niger railway project.
