--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="ANF-tv Official website">
   <link rel="icon" type="image/png" href="./public/Images/tv logo 2.png"/>
-    <meta name="keywords" content="Portfolio,suleiman's Portfolio,Faruk's Portfolio,developer's Portfolio">
+  <meta name="keywords" content="news,anf,tv,politics,sports,business,culture,africa,nigeria,entertainment,science,technology">
   <title>ANF-tv</title>
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
   <link rel="stylesheet" href="./css/header.css">
