nav links adjustment

--- a/single-view.html
+++ b/single-view.html
@@ -25,22 +25,22 @@
             <a href="./index.html" id="news-link">News</a>
           </li>
           <li id="politics">
-            <a href="#" id="politics-link">Politics</a>
+            <a href="./category.html" id="politics-link">Politics</a>
           </li>
           <li id="sports">
-            <a href="#" id="sports-link">Sports</a>
+            <a href="./category.html" id="sports-link">Sports</a>
           </li>
           <li id="culture">
-            <a href="#" id="culture-link">Culture</a>
+            <a href="./category.html" id="culture-link">Culture</a>
           </li>
           <li id="business">
-            <a href="#" id="business-link">Business</a>
+            <a href="./category.html" id="business-link">Business</a>
           </li>
           <li id="entertainment">
-            <a href="#" id="entertainment-link">Entertainment</a>
+            <a href="./category.html" id="entertainment-link">Entertainment</a>
           </li>
           <li id="science-technology">
-            <a href="#" id="science-technology-link">Science & Technology</a>
+            <a href="./category.html" id="science-technology-link">Science & Technology</a>
           </li>
         </ul>
       </div>
