--- a/category.html
+++ b/category.html
@@ -61,7 +61,16 @@
           <video src="./public/Videos/Alexandre Lacazette goal Arsenal vs Southampton 1_0 (1).mp4-.mp4" class="summary-media"></video>
             <!-- <img src="./public/Images/1_Vlahovic-Lacazette.png" alt="news image" class="summary-media"> -->
             <p class="caption">
-              Alexandre Lacazette is telling Arsenal to rethink Dusan Vlahovic bid after revealing comparison
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam pariatur, voluptatum laborum cumque soluta delectus, placeat voluptatibus dolor vero, rerum dignissimos aperiam. Totam cupiditate dignissimos aliquam fugit nisi pariatur dolores?
+            </p>
+        </summary>
+        </a>
+        <a href="./single-view.html" id="summary-link">
+        <summary class="summary">
+          <!-- <video src="./public/Videos/Alexandre Lacazette goal Arsenal vs Southampton 1_0 (1).mp4-.mp4" class="summary-media"></video> -->
+            <img src="./public/Images/1_Vlahovic-Lacazette.png" alt="news image" class="summary-media">
+            <p class="caption">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam pariatur, voluptatum laborum cumque soluta delectus, placeat voluptatibus dolor vero, rerum dignissimos aperiam. Totam cupiditate dignissimos aliquam fugit nisi pariatur dolores?
             </p>
         </summary>
         </a>
@@ -70,7 +79,16 @@
           <video src="./public/Videos/Alexandre Lacazette goal Arsenal vs Southampton 1_0 (1).mp4-.mp4" class="summary-media"></video>
             <!-- <img src="./public/Images/1_Vlahovic-Lacazette.png" alt="news image" class="summary-media"> -->
             <p class="caption">
-              Alexandre Lacazette is telling Arsenal to rethink Dusan Vlahovic bid after revealing comparison
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam pariatur, voluptatum laborum cumque soluta delectus, placeat voluptatibus dolor vero, rerum dignissimos aperiam. Totam cupiditate dignissimos aliquam fugit nisi pariatur dolores?
+            </p>
+        </summary>
+        </a>
+        <a href="./single-view.html" id="summary-link">
+        <summary class="summary">
+          <!-- <video src="./public/Videos/Alexandre Lacazette goal Arsenal vs Southampton 1_0 (1).mp4-.mp4" class="summary-media"></video> -->
+            <img src="./public/Images/1_Vlahovic-Lacazette.png" alt="news image" class="summary-media">
+            <p class="caption">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam pariatur, voluptatum laborum cumque soluta delectus, placeat voluptatibus dolor vero, rerum dignissimos aperiam. Totam cupiditate dignissimos aliquam fugit nisi pariatur dolores?
             </p>
         </summary>
         </a>
@@ -79,7 +97,16 @@
           <video src="./public/Videos/Alexandre Lacazette goal Arsenal vs Southampton 1_0 (1).mp4-.mp4" class="summary-media"></video>
             <!-- <img src="./public/Images/1_Vlahovic-Lacazette.png" alt="news image" class="summary-media"> -->
             <p class="caption">
-              Alexandre Lacazette is telling Arsenal to rethink Dusan Vlahovic bid after revealing comparison
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam pariatur, voluptatum laborum cumque soluta delectus, placeat voluptatibus dolor vero, rerum dignissimos aperiam. Totam cupiditate dignissimos aliquam fugit nisi pariatur dolores?
+            </p>
+        </summary>
+        </a>
+        <a href="./single-view.html" id="summary-link">
+        <summary class="summary">
+          <!-- <video src="./public/Videos/Alexandre Lacazette goal Arsenal vs Southampton 1_0 (1).mp4-.mp4" class="summary-media"></video> -->
+            <img src="./public/Images/1_Vlahovic-Lacazette.png" alt="news image" class="summary-media">
+            <p class="caption">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam pariatur, voluptatum laborum cumque soluta delectus, placeat voluptatibus dolor vero, rerum dignissimos aperiam. Totam cupiditate dignissimos aliquam fugit nisi pariatur dolores?
             </p>
         </summary>
         </a>
@@ -88,7 +115,16 @@
           <video src="./public/Videos/Alexandre Lacazette goal Arsenal vs Southampton 1_0 (1).mp4-.mp4" class="summary-media"></video>
             <!-- <img src="./public/Images/1_Vlahovic-Lacazette.png" alt="news image" class="summary-media"> -->
             <p class="caption">
-              Alexandre Lacazette is telling Arsenal to rethink Dusan Vlahovic bid after revealing comparison
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam pariatur, voluptatum laborum cumque soluta delectus, placeat voluptatibus dolor vero, rerum dignissimos aperiam. Totam cupiditate dignissimos aliquam fugit nisi pariatur dolores?
+            </p>
+        </summary>
+        </a>
+        <a href="./single-view.html" id="summary-link">
+        <summary class="summary">
+          <!-- <video src="./public/Videos/Alexandre Lacazette goal Arsenal vs Southampton 1_0 (1).mp4-.mp4" class="summary-media"></video> -->
+            <img src="./public/Images/1_Vlahovic-Lacazette.png" alt="news image" class="summary-media">
+            <p class="caption">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam pariatur, voluptatum laborum cumque soluta delectus, placeat voluptatibus dolor vero, rerum dignissimos aperiam. Totam cupiditate dignissimos aliquam fugit nisi pariatur dolores?
             </p>
         </summary>
         </a>
@@ -97,52 +133,16 @@
           <video src="./public/Videos/Alexandre Lacazette goal Arsenal vs Southampton 1_0 (1).mp4-.mp4" class="summary-media"></video>
             <!-- <img src="./public/Images/1_Vlahovic-Lacazette.png" alt="news image" class="summary-media"> -->
             <p class="caption">
-              Alexandre Lacazette is telling Arsenal to rethink Dusan Vlahovic bid after revealing comparison
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam pariatur, voluptatum laborum cumque soluta delectus, placeat voluptatibus dolor vero, rerum dignissimos aperiam. Totam cupiditate dignissimos aliquam fugit nisi pariatur dolores?
             </p>
         </summary>
         </a>
         <a href="./single-view.html" id="summary-link">
         <summary class="summary">
-          <video src="./public/Videos/Alexandre Lacazette goal Arsenal vs Southampton 1_0 (1).mp4-.mp4" class="summary-media"></video>
-            <!-- <img src="./public/Images/1_Vlahovic-Lacazette.png" alt="news image" class="summary-media"> -->
+          <!-- <video src="./public/Videos/Alexandre Lacazette goal Arsenal vs Southampton 1_0 (1).mp4-.mp4" class="summary-media"></video> -->
+            <img src="./public/Images/1_Vlahovic-Lacazette.png" alt="news image" class="summary-media">
             <p class="caption">
-              Alexandre Lacazette is telling Arsenal to rethink Dusan Vlahovic bid after revealing comparison
-            </p>
-        </summary>
-        </a>
-        <a href="./single-view.html" id="summary-link">
-        <summary class="summary">
-          <video src="./public/Videos/Alexandre Lacazette goal Arsenal vs Southampton 1_0 (1).mp4-.mp4" class="summary-media"></video>
-            <!-- <img src="./public/Images/1_Vlahovic-Lacazette.png" alt="news image" class="summary-media"> -->
-            <p class="caption">
-              Alexandre Lacazette is telling Arsenal to rethink Dusan Vlahovic bid after revealing comparison
-            </p>
-        </summary>
-        </a>
-        <a href="./single-view.html" id="summary-link">
-        <summary class="summary">
-          <video src="./public/Videos/Alexandre Lacazette goal Arsenal vs Southampton 1_0 (1).mp4-.mp4" class="summary-media"></video>
-            <!-- <img src="./public/Images/1_Vlahovic-Lacazette.png" alt="news image" class="summary-media"> -->
-            <p class="caption">
-              Alexandre Lacazette is telling Arsenal to rethink Dusan Vlahovic bid after revealing comparison
-            </p>
-        </summary>
-        </a>
-        <a href="./single-view.html" id="summary-link">
-        <summary class="summary">
-          <video src="./public/Videos/Alexandre Lacazette goal Arsenal vs Southampton 1_0 (1).mp4-.mp4" class="summary-media"></video>
-            <!-- <img src="./public/Images/1_Vlahovic-Lacazette.png" alt="news image" class="summary-media"> -->
-            <p class="caption">
-              Alexandre Lacazette is telling Arsenal to rethink Dusan Vlahovic bid after revealing comparison
-            </p>
-        </summary>
-        </a>
-        <a href="./single-view.html" id="summary-link">
-        <summary class="summary">
-          <video src="./public/Videos/Alexandre Lacazette goal Arsenal vs Southampton 1_0 (1).mp4-.mp4" class="summary-media"></video>
-            <!-- <img src="./public/Images/1_Vlahovic-Lacazette.png" alt="news image" class="summary-media"> -->
-            <p class="caption">
-              Alexandre Lacazette is telling Arsenal to rethink Dusan Vlahovic bid after revealing comparison
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam pariatur, voluptatum laborum cumque soluta delectus, placeat voluptatibus dolor vero, rerum dignissimos aperiam. Totam cupiditate dignissimos aliquam fugit nisi pariatur dolores?
             </p>
         </summary>
         </a>
