index page responsiveness

--- a/index.html
+++ b/index.html
@@ -50,6 +50,9 @@
           <img id="search-img" src="./public/Images/Search.png" alt="search-icon" id="search-icon">
         </button>
       </div>
+      <div id="hamburger">
+        <i class="fas fa-bars"></i>
+      </div>
     </nav>
     <hr id="nav-border">
     <div id="top-stories">
@@ -69,6 +72,7 @@
           <div class="slide-icon"></div>
         </div>
     </div>
+    
   </header>
   <main id="hero">
     <div id="panel-div">
@@ -369,7 +373,7 @@
     </div>
     <div id="footer-nav">
       <div id="left-p">
-        <p id="company" class="company">
+        <p id="company" class="footer-p">
           <a class="footer-p-link" href="">Company </a>
         </p>
       </div>
@@ -377,8 +381,8 @@
         <img src="./public/Images/Untitled-2.png" alt="Company Icon" id="company-icon" class="company-icon">
       </div>
       <div id="right-p">
-        <p id="helpdesk" class="helpdesk">
-          <a class="footer-p-link" href=""> Help desk </a>
+        <p id="helpdesk" class="footer-p">
+          <a class="footer-p-link" href=""> Helpdesk </a>
         </p>
       </div>
     </div>
