--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <img src="./public/Images/Untitled-2.png" alt="ANF-tv">
       </div>
       <div id="news-categories">
-        <ul id="news-list-container">
+        <ul id="news-list-container" class="news-cat-container">
           <li id="news">
             <a href="#" id="news-link">News</a>
           </li>
@@ -40,7 +40,7 @@
             <a href="./category.html" id="entertainment-link">Entertainment</a>
           </li>
           <li id="science-technology">
-            <a href="./category.html" id="science-technology-link">Science & Technology</a>
+            <a href="./category.html" id="science-technology-link">Technology</a>
           </li>
         </ul>
       </div>
@@ -50,7 +50,7 @@
           <img id="search-img" src="./public/Images/Search.png" alt="search-icon" id="search-icon">
         </button>
       </div>
-      <div id="hamburger">
+      <div id="hamburger" onclick="toggleNav()">
         <i class="fas fa-bars"></i>
       </div>
     </nav>
@@ -405,5 +405,6 @@
       © ANF-tv, Inc. 2022. Thank you for visiting.
     </p>
   </footer>
+  <script src="./js/index.js"></script>
 </body>
 </html>
