--- a/single-view.html
+++ b/single-view.html
@@ -20,9 +20,9 @@
         <img src="./public/Images/Untitled-2.png" alt="ANF-tv">
       </div>
       <div id="news-categories">
-        <ul id="news-list-container">
+        <ul id="news-list-container" class="news-cat-container">
           <li id="news">
-            <a href="./index.html" id="news-link">News</a>
+            <a href="#" id="news-link">News</a>
           </li>
           <li id="politics">
             <a href="./category.html" id="politics-link">Politics</a>
@@ -40,7 +40,7 @@
             <a href="./category.html" id="entertainment-link">Entertainment</a>
           </li>
           <li id="science-technology">
-            <a href="./category.html" id="science-technology-link">Science & Technology</a>
+            <a href="./category.html" id="science-technology-link">Technology</a>
           </li>
         </ul>
       </div>
@@ -49,6 +49,9 @@
         <button id="search-button">
           <img id="search-img" src="./public/Images/Search.png" alt="search-icon" id="search-icon">
         </button>
+      </div>
+      <div id="hamburger" onclick="toggleNav()">
+        <i class="fas fa-bars"></i>
       </div>
     </nav>
     <hr id="nav-border">
@@ -114,5 +117,6 @@
       © ANF-tv, Inc. 2022. Thank you for visiting.
     </p>
   </footer>
+  <script src="./js/index.js"></script>
 </body>
 </html>
