Category view responsiveness

--- a/category.html
+++ b/category.html
@@ -45,7 +45,7 @@
         </ul>
       </div>
       <div id="search">
-        <input type="search" name="search" value="Search" id="search-input">
+        <input type="search" name="search" placeholder="Search" id="search-input">
         <button id="search-button">
           <img id="search-img" src="./public/Images/Search.png" alt="search-icon" id="search-icon">
         </button>
