index page linked on single view

--- a/single-view.html
+++ b/single-view.html
@@ -22,7 +22,7 @@
       <div id="news-categories">
         <ul id="news-list-container" class="news-cat-container">
           <li id="news">
-            <a href="#" id="news-link">News</a>
+            <a href="./index.html" id="news-link">News</a>
           </li>
           <li id="politics">
             <a href="./category.html" id="politics-link">Politics</a>
