single view responsiveness

--- a/single-view.html
+++ b/single-view.html
@@ -59,6 +59,7 @@
     <main id="single-view-main">
       <div id="video-container">
         <iframe id="video" src="./public/Videos/Alexandre Lacazette goal Arsenal vs Southampton 1_0 (1).mp4-.mp4" frameborder="0"></iframe>
+        <!-- <img src="./public/Images/1_Vlahovic-Lacazette.png" alt="News Image" id="image"> -->
       </div>
       <div id="write-up">
         <p class="paragraph">
