--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
   <link rel="stylesheet" href="./css/footer.css">
 </head>
 <body>
+  <div id="modal-backgroung" class="" onclick="toggleNav()">
+
+  </div>
   <header id="header">
     <nav id="navbar">
       <div id="logo">
