open nav items positioning

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <link rel="stylesheet" href="./css/footer.css">
 </head>
 <body>
-  <div id="modal-backgroung" class="" onclick="toggleNav()">
+  <div id="modal-background" class="" onclick="toggleNav()">
 
   </div>
   <header id="header">
@@ -25,7 +25,7 @@
       <div id="news-categories">
         <ul id="news-list-container" class="news-cat-container">
           <li id="news">
-            <a href="#" id="news-link">News</a>
+            <a href="./index.html" id="news-link">News</a>
           </li>
           <li id="politics">
             <a href="./category.html" id="politics-link">Politics</a>
