--- a/single-view.html
+++ b/single-view.html
@@ -14,7 +14,7 @@
   <link rel="stylesheet" href="./css/footer.css">
 </head>
 <body>
-  <div id="modal-backgroung" class="" onclick="toggleNav()">
+  <div id="modal-background" class="" onclick="toggleNav()">
 
   </div>
   <header id="header">
