--- a/single-view.html
+++ b/single-view.html
@@ -14,51 +14,96 @@
   <link rel="stylesheet" href="./css/footer.css">
 </head>
 <body>
-  <div id="modal-background" class="" onclick="toggleNav()">
-
-  </div>
-  <header id="header">
-    <nav id="navbar">
-      <div id="logo">
-        <img src="./public/Images/Untitled-2.png" alt="ANF-tv">
-      </div>
-      <div id="news-categories">
-        <ul id="news-list-container" class="news-cat-container">
-          <li id="news">
+  <div class="modal" id="modal-background" onclick="closeNav()">
+    <div id="close" onclick="closeNav()">
+      <i class="fas fa-times"></i>
+    </div>
+      <div class="news-categories-mobile">
+        <ul id="news-list-container-mobile" class="news-cat-container">
+          <li id="news-mobile">
             <a href="./index.html" id="news-link">News</a>
           </li>
-          <li id="politics">
+          <li id="politics-mobile">
             <a href="./category.html" id="politics-link">Politics</a>
           </li>
-          <li id="sports">
+          <li id="sports-mobile">
             <a href="./category.html" id="sports-link">Sports</a>
           </li>
-          <li id="culture">
+          <li id="culture-mobile">
             <a href="./category.html" id="culture-link">Culture</a>
           </li>
-          <li id="business">
+          <li id="business-mobile">
             <a href="./category.html" id="business-link">Business</a>
           </li>
-          <li id="entertainment">
+          <li id="entertainment-mobile">
             <a href="./category.html" id="entertainment-link">Entertainment</a>
           </li>
-          <li id="science-technology">
+          <li id="science-technology-mobile">
             <a href="./category.html" id="science-technology-link">Technology</a>
           </li>
         </ul>
       </div>
-      <div id="search">
-        <input type="search" name="search" placeholder="Search" id="search-input">
-        <button id="search-button">
-          <img id="search-img" src="./public/Images/Search.png" alt="search-icon" id="search-icon">
-        </button>
+    </div>
+    <header id="header">
+      <nav id="navbar">
+        <div id="logo">
+          <img src="./public/Images/Untitled-2.png" alt="ANF-tv">
+        </div>
+        <div id="news-categories">
+          <ul id="news-list-container" class="news-cat-container">
+            <li id="news">
+              <a href="./index.html" id="news-link">News</a>
+            </li>
+            <li id="politics">
+              <a href="./category.html" id="politics-link">Politics</a>
+            </li>
+            <li id="sports">
+              <a href="./category.html" id="sports-link">Sports</a>
+            </li>
+            <li id="culture">
+              <a href="./category.html" id="culture-link">Culture</a>
+            </li>
+            <li id="business">
+              <a href="./category.html" id="business-link">Business</a>
+            </li>
+            <li id="entertainment">
+              <a href="./category.html" id="entertainment-link">Entertainment</a>
+            </li>
+            <li id="science-technology">
+              <a href="./category.html" id="science-technology-link">Technology</a>
+            </li>
+          </ul>
+        </div>
+        <div id="search">
+          <input type="search" name="search" placeholder="Search" id="search-input">
+          <button id="search-button">
+            <img id="search-img" src="./public/Images/Search.png" alt="search-icon" id="search-icon">
+          </button>
+        </div>
+        <div id="hamburger" onclick="openNav()">
+          <i class="fas fa-bars"></i>
+        </div>
+      </nav>
+      <hr id="nav-border">
+      <div id="top-stories">
+          <div id="subject-container">
+            <h1 id="subject">
+              Buhari signs AFCTA agreement
+            </h1>
+          </div>
+          <div id="image-container">
+            <img src="./public/Images/download.jpg" alt="top-story-image" id="top-story-img">
+          </div>
+          <div id="slide-icon-container">
+            <div class="slide-icon current-slide-icon"></div>
+            <div class="slide-icon"></div>
+            <div class="slide-icon"></div>
+            <div class="slide-icon"></div>
+            <div class="slide-icon"></div>
+          </div>
       </div>
-      <div id="hamburger" onclick="toggleNav()">
-        <i class="fas fa-bars"></i>
-      </div>
-    </nav>
-    <hr id="nav-border">
-  </header>
+      
+    </header>
     <main id="single-view-main">
       <div id="video-container">
         <iframe id="video" src="./public/Videos/Alexandre Lacazette goal Arsenal vs Southampton 1_0 (1).mp4-.mp4" frameborder="0"></iframe>
