mobile side nave positioning

--- a/single-view.html
+++ b/single-view.html
@@ -14,9 +14,12 @@
   <link rel="stylesheet" href="./css/footer.css">
 </head>
 <body>
-  <div class="modal" id="modal-background" onclick="closeNav()">
+  <div class="modal" id="modal-background">
     <div id="close" onclick="closeNav()">
       <i class="fas fa-times"></i>
+    </div>
+    <div id="void" onclick="closeNav()">
+
     </div>
       <div class="news-categories-mobile">
         <ul id="news-list-container-mobile" class="news-cat-container">
@@ -105,6 +108,11 @@
       
     </header>
     <main id="single-view-main">
+      <div id="header-container">
+        <h1 id="news-header">
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet, dicta.
+        </h1>
+      </div>
       <div id="video-container">
         <iframe id="video" src="./public/Videos/Alexandre Lacazette goal Arsenal vs Southampton 1_0 (1).mp4-.mp4" frameborder="0"></iframe>
         <!-- <img src="./public/Images/1_Vlahovic-Lacazette.png" alt="News Image" id="image"> -->
