--- a/category.html
+++ b/category.html
@@ -21,25 +21,25 @@
       <div class="news-categories-mobile">
         <ul id="news-list-container-mobile" class="news-cat-container">
           <li id="news-mobile">
-            <a href="./index.html" id="news-link">News</a>
+            <a href="#" class="nav-a-link" id="news-link">News</a>
           </li>
           <li id="politics-mobile">
-            <a href="./category.html" id="politics-link">Politics</a>
+            <a href="#" class="nav-a-link" id="politics-link">Politics</a>
           </li>
           <li id="sports-mobile">
-            <a href="./category.html" id="sports-link">Sports</a>
+            <a href="#" class="nav-a-link" id="sports-link">Sports</a>
           </li>
           <li id="culture-mobile">
-            <a href="./category.html" id="culture-link">Culture</a>
+            <a href="#" class="nav-a-link" id="culture-link">Culture</a>
           </li>
           <li id="business-mobile">
-            <a href="./category.html" id="business-link">Business</a>
+            <a href="#" class="nav-a-link" id="business-link">Business</a>
           </li>
           <li id="entertainment-mobile">
-            <a href="./category.html" id="entertainment-link">Entertainment</a>
+            <a href="./category.html" class="nav-a-link" id="entertainment-link">Entertainment</a>
           </li>
           <li id="science-technology-mobile">
-            <a href="./category.html" id="science-technology-link">Technology</a>
+            <a href="./category.html" class="nav-a-link" id="science-technology-link">Technology</a>
           </li>
         </ul>
       </div>
@@ -52,25 +52,25 @@
         <div id="news-categories">
           <ul id="news-list-container" class="news-cat-container">
             <li id="news">
-              <a href="./index.html" id="news-link">News</a>
+              <a href="#" class="nav-a-link" id="news-link">News</a>
             </li>
             <li id="politics">
-              <a href="./category.html" id="politics-link">Politics</a>
+              <a href="#" id="politics-link" class="nav-a-link">Politics</a>
             </li>
             <li id="sports">
-              <a href="./category.html" id="sports-link">Sports</a>
+              <a href="#" id="sports-link" class="nav-a-link">Sports</a>
             </li>
             <li id="culture">
-              <a href="./category.html" id="culture-link">Culture</a>
+              <a href="./category.html" id="culture-link" class="nav-a-link">Culture</a>
             </li>
             <li id="business">
-              <a href="./category.html" id="business-link">Business</a>
+              <a href="./category.html" id="business-link" class="nav-a-link">Business</a>
             </li>
             <li id="entertainment">
-              <a href="./category.html" id="entertainment-link">Entertainment</a>
+              <a href="./category.html" id="entertainment-link" class="nav-a-link">Entertainment</a>
             </li>
             <li id="science-technology">
-              <a href="./category.html" id="science-technology-link">Technology</a>
+              <a href="./category.html" id="science-technology-link" class="nav-a-link">Technology</a>
             </li>
           </ul>
         </div>
@@ -238,6 +238,7 @@
     </p>
   </footer>
   <script src="./js/index.js"></script>
+  <script src="./js/category.js"></script>
   <script
   src="https://code.jquery.com/jquery-3.6.0.min.js"
   integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
