add news form submission to db

--- a/add-news.html
+++ b/add-news.html
@@ -220,7 +220,7 @@ $('#form').submit(function(event) {
         type: "POST",
         contentType: "application/json",
         dataType: "json",
-        url: 'https://anf-tv.herokuapp.com/news/create',
+        url: 'https://crossorigin.me/https://anf-tv.herokuapp.com/news/create',
         data: newsData,
         processData: false,
         success: function (response) {
