cors link added

--- a/add-news.html
+++ b/add-news.html
@@ -220,14 +220,17 @@ $('#form').submit(function(event) {
         type: "POST",
         contentType: "application/json",
         dataType: "json",
-        url: 'https://anf-tv.herokuapp.com/news/create',
+        url: 'https://crossorigin.me/https://anf-tv.herokuapp.com/news/create',
         data: newsData,
         processData: false,
         success: function (response) {
         // console.log('success');
         // console.log(response);
           $("#response").html(response.message);
-          window.location = "admin-landing.html";
+          if (response.status === "Success") {
+            window.location = "admin-landing.html";
+          }
+          
       },
         error: function(xhr, status, error) {
           console.log(xhr);
