--- a/admin-login.html
+++ b/admin-login.html
@@ -13,7 +13,7 @@
 <body>
   
   <div id="form-container">
-      <form id="form" method="post" action="https://anf-tv.herokuapp.com/users/sign-in">
+      <form id="form" method="post">
         <h2 id="login-form-header">
           ANF-tv Admin Login
         </h2>
