--- a/admin-landing.html
+++ b/admin-landing.html
@@ -83,6 +83,17 @@
           <i class="fas fa-bars"></i>
         </div>
       </nav>
+      <details id="user">
+        <summary id="user-summary">
+          User
+        </summary>
+        <p id="user-profile">
+          Profile
+        </p>
+        <p onclick="logOut()" id="user-logout">
+          logout
+        </p>
+      </details>
     </header>
     <main id="main">
       <section id="manage-news">
@@ -146,11 +157,29 @@
   integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
   crossorigin="anonymous"></script>
   <script  type="text/javascript">
+
+function getCookie(cname) {
+  let name = cname + "=";
+  let decodedCookie = decodeURIComponent(document.cookie);
+  let ca = decodedCookie.split(';');
+  for(let i = 0; i <ca.length; i++) {
+    let c = ca[i];
+    while (c.charAt(0) == ' ') {
+      c = c.substring(1);
+    }
+    if (c.indexOf(name) == 0) {
+      return c.substring(name.length, c.length);
+    }
+  }
+  return "";
+}
+
 $(document).ready(function () {
-      $("#login").on('click', function () {
-        let token = document.cookie;
-        console.log(token);
-    });
+  let userName = getCookie("userName");
+  userName = userName.charAt(0).toUpperCase() + userName.slice(1);
+  if (userName) {
+    $("#user-summary").html(userName);
+  }
   });
 
 
