--- a/add-news.html
+++ b/add-news.html
@@ -102,7 +102,7 @@
     </header>
   <main id="add-news-main">
     <section id="form-section">
-      <form id="form" method="post">
+      <form id="form" method="post" action="">
         
         <h2 id="form-header">
           Add News
@@ -213,7 +213,7 @@ $(document).ready(function () {
     $("#user-summary").html(userName);
   }
   });
-$('#form').submit(function(event) {
+$('#add-news-submit').click(function(event) {
   event.preventDefault(); // Prevent the form from submitting via the browser
 
   const uploadedFile = document.getElementById('media-upload-input').files[0];
@@ -253,6 +253,9 @@ $('#form').submit(function(event) {
         type: "POST",
         contentType: "application/json",
         dataType: "json",
+        headers: {  
+          'Access-Control-Allow-Origin': 'https://anf-tv.netlify.app/' 
+        },
         url: 'https://anf-tv.herokuapp.com/news/create',
         data: newsData,
         processData: false,
