cors header added

--- a/add-news.html
+++ b/add-news.html
@@ -253,7 +253,7 @@ $('#add-news-submit').click(function(event) {
         type: "POST",
         contentType: "application/json",
         dataType: "json",
-        url: 'http://localhost:3000/news/create',
+        url: 'https://anf-tv.herokuapp.com/news/create',
         headers: {  
           'Access-Control-Allow-Origin': 'https://anf-tv.netlify.app/' 
         },
