category page fetch data from db

--- a/add-news.html
+++ b/add-news.html
@@ -281,8 +281,8 @@ $('#add-news-submit').click(function(event) {
         var topStory = $("#top-story").prop('checked');
         var media = mediaBase64;
         var content = $("#content").val();
-        console.log(editorsPick);
-        console.log(topStory);
+        // console.log(editorsPick);
+        // console.log(topStory);
         var news = {
               subject,
               category,
