--- a/index.html
+++ b/index.html
@@ -21,25 +21,25 @@
       <div class="news-categories-mobile">
         <ul id="news-list-container-mobile" class="news-cat-container">
           <li id="news-mobile">
-            <a href="#" class="nav-a-link" id="news-link">News</a>
+            <a href="./index.html" class="nav-a-link" id="news-link">News</a>
           </li>
           <li id="politics-mobile">
-            <a href="#" class="nav-a-link" id="politics-link">Politics</a>
+            <a href="./category.html" class="nav-a-link" id="politics-link">Politics</a>
           </li>
           <li id="sports-mobile">
-            <a href="#" class="nav-a-link" id="sports-link">Sports</a>
+            <a href="./category.html" class="nav-a-link" id="sports-link">Sports</a>
           </li>
           <li id="culture-mobile">
-            <a href="#" class="nav-a-link" id="culture-link">Culture</a>
+            <a href="./category.html" class="nav-a-link" id="culture-link">Culture</a>
           </li>
           <li id="business-mobile">
-            <a href="#" class="nav-a-link" id="business-link">Business</a>
+            <a href="./category.html" class="nav-a-link" id="business-link">Business</a>
           </li>
           <li id="entertainment-mobile">
-            <a href="#" class="nav-a-link" id="entertainment-link">Entertainment</a>
+            <a href="./category.html" class="nav-a-link" id="entertainment-link">Entertainment</a>
           </li>
           <li id="science-technology-mobile">
-            <a href="#" class="nav-a-link" id="science-technology-link">Technology</a>
+            <a href="./category.html" class="nav-a-link" id="science-technology-link">Technology</a>
           </li>
         </ul>
       </div>
@@ -52,25 +52,25 @@
         <div id="news-categories">
           <ul id="news-list-container" class="news-cat-container">
             <li id="news">
-              <a href="#" class="nav-a-link" id="news-link">News</a>
+              <a href="./index.html" class="nav-a-link" id="news-link">News</a>
             </li>
             <li id="politics">
-              <a href="#" id="politics-link" class="nav-a-link">Politics</a>
+              <a href="./category.html" id="politics-link" class="nav-a-link">Politics</a>
             </li>
             <li id="sports">
-              <a href="#" id="sports-link" class="nav-a-link">Sports</a>
+              <a href="./category.html" id="sports-link" class="nav-a-link">Sports</a>
             </li>
             <li id="culture">
-              <a href="#" id="culture-link" class="nav-a-link">Culture</a>
+              <a href="./category.html" id="culture-link" class="nav-a-link">Culture</a>
             </li>
             <li id="business">
-              <a href="#" id="business-link" class="nav-a-link">Business</a>
+              <a href="./category.html" id="business-link" class="nav-a-link">Business</a>
             </li>
             <li id="entertainment">
-              <a href="#" id="entertainment-link" class="nav-a-link">Entertainment</a>
+              <a href="./category.html" id="entertainment-link" class="nav-a-link">Entertainment</a>
             </li>
             <li id="science-technology">
-              <a href="#" id="science-technology-link" class="nav-a-link">Technology</a>
+              <a href="./category.html" id="science-technology-link" class="nav-a-link">Technology</a>
             </li>
           </ul>
         </div>
